video section added

--- a/index.html
+++ b/index.html
@@ -269,6 +269,28 @@
     </div>
     -->
     
+    <!-- Video Editing Section -->
+    <div class="site-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-md-12 text-center">
+            <h2 class="font-weight-bold">My Video Editing</h2>
+            <p class="lead">Check out some of my video editing work</p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8">
+            <div class="embed-responsive embed-responsive-16by9">
+              <video controls class="embed-responsive-item">
+                <source src="videos/lighter-ad.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="footer site-section bg-light">
       <div class="container">
         <div class="row">
