AI prompt galary added

--- a/index.html
+++ b/index.html
@@ -291,6 +291,38 @@
       </div>
     </div>
 
+    <!-- AI Prompt Gallery Section -->
+    <div class="site-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-md-12 text-center">
+            <h2 class="font-weight-bold">AI Prompt Gallery</h2>
+            <p class="lead">Explore my AI-generated artwork</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 mb-4">
+            <div class="card">
+              <img src="Ai/dark-golden.png" alt="Dark Golden" class="card-img-top img-fluid">
+              <div class="card-body">
+                <h5 class="card-title">Dark Golden</h5>
+                <p class="card-text">A mysterious golden artifact in a dark setting</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="card">
+              <img src="Ai/sitting-on-cloud.png" alt="Sitting on Cloud" class="card-img-top img-fluid">
+              <div class="card-body">
+                <h5 class="card-title">Sitting on Cloud</h5>
+                <p class="card-text">Peaceful figure resting on a fluffy cloud</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="footer site-section bg-light">
       <div class="container">
         <div class="row">
