--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <div class="row">
           <div class="col-md-6 mb-4">
             <div class="card">
-              <img src="Ai/dark-golden.png" alt="Dark Golden" class="card-img-top img-fluid">
+              <img src="AI/dark-golden.png" alt="Dark Golden" class="card-img-top img-fluid">
               <div class="card-body">
                 <h5 class="card-title">Dark Golden</h5>
                 <p class="card-text">A mysterious golden artifact in a dark setting</p>
@@ -312,7 +312,7 @@
           </div>
           <div class="col-md-6 mb-4">
             <div class="card">
-              <img src="Ai/sitting-on-cloud.png" alt="Sitting on Cloud" class="card-img-top img-fluid">
+              <img src="AI/sitting-on-cloud.png" alt="Sitting on Cloud" class="card-img-top img-fluid">
               <div class="card-body">
                 <h5 class="card-title">Sitting on Cloud</h5>
                 <p class="card-text">Peaceful figure resting on a fluffy cloud</p>
