--- a/index.html
+++ b/index.html
@@ -304,15 +304,15 @@
           <div class="col-md-6 mb-4">
             <a href="AI/dark-golden.png" class="portfolio-item" data-fancybox="gallery"><img src="AI/dark-golden.png" alt="Dark Golden" class="img-fluid"></a>
             <div class="mt-3">
-              <h5 class="card-title">Dark Golden</h5>
-              <p class="card-text">A mysterious golden artifact in a dark setting</p>
+              <h5 class="card-title">Dramatic Profile Portrait</h5>
+              <p class="card-text">Dramatic Profile Portrait with Cinematic Lighting</p>
             </div>
           </div>
           <div class="col-md-6 mb-4">
             <a href="AI/sitting-on-cloud.png" class="portfolio-item" data-fancybox="gallery"><img src="AI/sitting-on-cloud.png" alt="Sitting on Cloud" class="img-fluid"></a>
             <div class="mt-3">
               <h5 class="card-title">Sitting on Cloud</h5>
-              <p class="card-text">Peaceful figure resting on a fluffy cloud</p>
+              <p class="card-text">A man resting on a fluffy cloud</p>
             </div>
           </div>
         </div>
