new project added - allmax learn

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
           <a href="portfolio-wacol.html" class="portfolio-item"><img src="images/edi.jpg" alt="Image" class="img-fluid"></a>
         </div>
       </div>
+      <div class="row align-items-start">
+        <div class="col-md-4">
+          <a href="portfolio-allmax-learn.html" class="portfolio-item"><img src="images/Brand-grid.jpg" alt="Allmax Learn" class="img-fluid"></a>
+        </div>
+      </div>
     </div>
 
     <div class="site-section">
