homepage grid adjusted

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@
         <div class="col-md-4">
           <a href="portfolio-allmax-learn.html" class="portfolio-item"><img src="images/Brand-grid.jpg" alt="Allmax Learn" class="img-fluid"></a>
         </div>
+        <div class="col-md-4">
+          <a href="portfolio-xeon.html" class="portfolio-item"><img src="images/IMG_0230.jpg" alt="Image" class="img-fluid"></a>
+        </div>
+        <div class="col-md-4">
+          <a href="portfolio-angelsai.html" class="portfolio-item"><img src="images/IMG_0221.PNG" alt="Image" class="img-fluid"></a>
+        </div>
       </div>
     </div>
 
