allmax-learn-link updated

--- a/portfolio-allmax-learn.html
+++ b/portfolio-allmax-learn.html
@@ -160,7 +160,7 @@
             </p>
 
             <p>
-              <strong class="font-weight-bold text-black">Website:</strong> <br> <a href="#">https://allmaxlearn.com/</a>
+              <strong class="font-weight-bold text-black">Website:</strong> <br> <a href="https://lms-frontend-omega-rust.vercel.app/">learn.allmax.com</a>
             </p>
             <img src="images/color-palate.png" alt="Color Palette" class="img-fluid mb-3">
             <img src="images/Allmax-learn-Illustration-blue.jpg" alt="Illustration" class="img-fluid mb-3">
