allmax project update

--- a/portfolio-allmax-learn.html
+++ b/portfolio-allmax-learn.html
@@ -135,7 +135,7 @@
 
             <h5>Tools Used</h5>
             <ul>
-              <li>Adobe Illustrator: For logo design and brand elements</li>
+              <li>Adobe Illustrator: For logo design, Illustrations and brand elements</li>
               <li>Adobe Photoshop: For image manipulation and final adjustments</li>
               <li>Adobe XD: For digital mockups and UI elements</li>
             </ul>
@@ -153,16 +153,16 @@
               <strong class="font-weight-bold text-black">Role:</strong> <br> Branding, Visual Identity, Logo Design
             </p>
             <p>
-              <strong class="font-weight-bold text-black">Year:</strong> <br> 2024
+              <strong class="font-weight-bold text-black">Year:</strong> <br> 2025
             </p>
             <p>
               <strong class="font-weight-bold text-black">Client:</strong> <br> Allmax Media
             </p>
 
             <p>
-              <strong class="font-weight-bold text-black">Website:</strong> <br> <a href="https://lms-frontend-omega-rust.vercel.app/">learn.allmax.com</a>
+              <strong class="font-weight-bold text-black">Website:</strong> <br> <a href="#">https://allmaxlearn.com/</a>
             </p>
-            <img src="images/color-palate.png" alt="Color Palette" class="img-fluid mb-3">
+            <img src="images/Allmax-learn-color-palate.png" alt="Color Palette" class="img-fluid mb-3">
             <img src="images/Allmax-learn-Illustration-blue.jpg" alt="Illustration" class="img-fluid mb-3">
             <img src="images/Allmax-learn-social-media-ILLUSTRATION.jpg" alt="Social Media" class="img-fluid mb-3">
             <img src="images/Allmax-learn-social-media2.jpg" alt="Social Media 2" class="img-fluid mb-3">
