--- a/portfolio-allmax-learn.html
+++ b/portfolio-allmax-learn.html
@@ -138,6 +138,8 @@
               <li>Adobe Illustrator: For logo design, Illustrations and brand elements</li>
               <li>Adobe Photoshop: For image manipulation and final adjustments</li>
               <li>Adobe XD: For digital mockups and UI elements</li>
+              <li>Gemini-2.5-flash (Nano Banana): For image generation, digital mockups and UI elements</li>
+              <li>ChatGPT: For removing image background</li>
             </ul>
             
             <h5>Experience Gained</h5>
